larger padding in menu to avoid overlaps with resizers

--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -67,6 +67,15 @@
 	flex-grow: 1;
 	overflow-y: scroll;
 }
+.graphic-side div.menu .panel {
+	padding: 1rem;
+}
+.graphic-side div.menu .panel div.notice:not(:empty) {
+	margin-left: -1rem;
+	margin-right: -1rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
 
 dialog.figure {
 	position: absolute;
